--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ps2-member-sync",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "a bot for aiding in the syncing of member roles between discord & planetside 2",
   "main": "main.js",
   "author": "silverlily",
   "license": "modified ISC see README.md)",
   "dependencies": {
     "axios": "^0.21.0",
-    "eris": "^0.14.0"
+    "eris": "^0.14.0",
+    "pg": "^8.5.1"
   }
 }
